testsuite/tests/dependent/should_fail/T15859.stderr

T15859.hs:14:5: error:
    • Cannot apply expression of type ‘forall k -> k -> *’
      to a visible type argument ‘Int’
    • In the expression: (undefined :: KindOf A) @Int
      In an equation for ‘a’: a = (undefined :: KindOf A) @Int
